PetAdoptionSupportApp/force-app/main/default/objects/Pet__c/fields/For_Adoption__c.field-meta.xml
<CustomField>
    <fullName>For_Adoption__c</fullName>
    <defaultValue>true</defaultValue>
    <label>For Adoption</label>
    <type>Checkbox</type>
</CustomField>