PetAdoptionSupportApp/force-app/main/default/objects/Pet__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Bird</fullName>
            </value>
            <value>
                <fullName>Hamster</fullName>
            </value>
            <value>
                <fullName>Rabbit</fullName>
            </value>
            <value>
                <fullName>Guinea Pig</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Rat</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>